(raf) Added code to sort all lists (localfiles/playlists/SHOUTcast listings) alphabetically in ascending order (r713)
(sandberg) Made the graphics in the new UI configurable, to allow new skins to be made. (r716)
(raf) Now duplicates are eliminated from SHOUTcast listing genres. Duplicates are looked for in case insensitive mode. (r717)

BUG FIXES
(raf) Removed the config option to turn logging on/off. Just use log levels.

0.37-Final (r706) (2006-01-16) (svn.berlios.de/svnroot/repos/pspradio/Releases/PSPRadio0.37/)
NEW FEATURES
(raf) TextUI: Added a new config element to specify the length of the metadata.
(raf) GraphicsUI: Removed from the build as it doesn't work correctly with the current core.
(raf) TextUI: Added config item/implementation to provide 24/12-hour clock configuration.
(raf) TextUI: Separate config files per screen
(raf) TextUI: Metadata color is now configurable (see bug #5907)
(raf) Core: Removed local LibPSPNet; using pspsdk's pspnet now.
(raf) Core: Added new LocalFiles screen.
(raf) TextUI: Using new screens by semtex199.
(raf) TextUI: Added configuration items to cfg file to configure the list's titles.
(raf) TextUI: -2 in the X position for configuration items makes the item not be printed (suggested by HalfastII)
(raf) TextUI: The config file is now partitioned into one section per screen (suggested by HalfastII)
(raf) TextUI: Added support for showing the time and the battery level.
(raf) TextUI: Now files defined in playlists are displayed without the path, and the extension is only shown if configured to in the config file.
(raf) Compiled against latest pspsdk (r1542). There should be some speed improvements, as things like memcpy are now optimized.
(raf) Core/TextUI: Added support to print text using pixel coordinates
(raf) TexUI: Removed cleaning code that was unnecessary in the options screen renderer. This should speed it up a bit.
(sandberg) Added support for showing the time and the battery level on the 3D UI.